--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -1,14 +1,10 @@
-name: Test Self-Hosted Runner
+name: Simple Test
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  example:
+  test:
     runs-on: self-hosted
     steps:
-      - name: Test step
-        run: echo "Hello from self-hosted runner!"
-
+      - name: Echo test
+        run: echo "Runner works!"
