--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Echo test
-        run: echo "Runner works!"
+        run: echo "Runner works yoo!"
